hphp/hack/test/typecheck/array/safe_vector_array/disallows_array_of_int_when_array_of_tk_to_tv_is_required.php.exp
File "disallows_array_of_int_when_array_of_tk_to_tv_is_required.php", line 6, characters 24-34:
Invalid argument (Typing[4110])
  File "disallows_array_of_int_when_array_of_tk_to_tv_is_required.php", line 3, characters 39-52:
  Expected `dict<_, _>`
  File "disallows_array_of_int_when_array_of_tk_to_tv_is_required.php", line 5, characters 15-25:
  But got `vec<int>`
File "disallows_array_of_int_when_array_of_tk_to_tv_is_required.php", line 3, characters 39-52:
Some type arguments violate their constraints (Typing[4323])
  File "hackarray.hhi", line 33, characters 6-7:
  `Tk` is a constrained type parameter
  File "hackarray.hhi", line 33, characters 12-19:
  This type constraint is violated
  File "hackarray.hhi", line 33, characters 12-19:
  Expected `arraykey`
  File "disallows_array_of_int_when_array_of_tk_to_tv_is_required.php", line 3, characters 46-47:
  But got `Tk`
